--- a/front-end/src/Layout/Layout.css
+++ b/front-end/src/Layout/Layout.css
@@ -1,3 +1,4 @@
+
 .navbar-brand {
     letter-spacing: 5px;
 }
@@ -31,4 +32,52 @@ ul {
   }
 .price{
     background-color: white!important;
+}
+
+
+.image {
+opacity: 1;
+transition: .5s ease;
+backface-visibility: hidden;
+}
+
+.middle {
+transition: .5s ease;
+opacity: 0;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+text-align: center;
+}
+
+.restyle:hover .image {
+opacity: 0.3;
+}
+
+.restyle:hover .middle {
+opacity: 1;
+}
+
+.text {
+font-family: Arial, Helvetica, sans-serif;
+font-weight:bold;
+color: black;
+font-size: 16px;
+padding: 16px 32px;
+}
+
+
+.modal-body {
+    background-color: rgba(0, 0, 0, 0.001)!important;
+}
+
+/* .input-restyle::-webkit-outer-spin-button,
+.input-restyle::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+} */
+.input-restyle {
+    width: 4vw;
 }
