--- a/front-end/src/Layout/Layout.css
+++ b/front-end/src/Layout/Layout.css
@@ -12,8 +12,7 @@ body {
     margin:0;
     padding: 0;
 }
-footer {
-    clear:both;
+footer,.bg-service {
     background: rgb(69, 70, 130);
 
   }
