--- a/front-end/src/Layout/Layout.css
+++ b/front-end/src/Layout/Layout.css
@@ -52,18 +52,35 @@ transform: translate(-50%, -50%);
 text-align: center;
 }
 
-.restyle:hover .image {
-opacity: 0.3;
+.gallery-img {
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    position: relative;
+    
+  }
+  
+  .image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius:2%;
+  }
+
+.gallery:hover .image {
+filter: brightness(0.7);
 }
 
-.restyle:hover .middle {
+.gallery:hover .middle {
 opacity: 1;
 }
 
 .text {
 font-family: Arial, Helvetica, sans-serif;
 font-weight:bold;
-color: black;
+color:white;
 font-size: 16px;
 padding: 16px 32px;
 }
@@ -76,6 +93,13 @@ padding: 16px 32px;
 .input-restyle {
     width: 4vw;
 }
+
+.service-card{
+    transition: .5s ease;
+}
+.service-card :hover{
+    transform: scale(1.2);
+}
 .fa-google {
     background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
     -webkit-background-clip: text;
@@ -83,7 +107,17 @@ padding: 16px 32px;
     color: transparent;
     -webkit-text-fill-color: transparent;
   }
+  .modal-header{
+    border:0px;
+  }
+  .modal-content{
+    background-color: transparent;
+  }
 
+  .carousel-item img {
+    width: 60%;
+    margin: auto; /* Center the image */
+  }
   @media only screen and (max-width: 800px) {
     h1 {
         font-size: 8vw!important;
